--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Your Name — Academic Profile"
-name: "Your Name"
+title: "Zeba Shamsi — Academic Profile"
+name: "Zeba Shamsi"
 description: "Faculty profile • research, teaching, awards"
 remote_theme: "mmistakes/minimal-mistakes"
 plugins:
